Version (CVS)
-------------

XML:    Added some logic to avoid unnecessary use of 'xsi:type' when
        marshalling. The logic check if Castor is able to find the proper java
        class to instantiate from the mapping file information.
        (Sebastien Gignoux <gignoux@intalio.com>) 

XML:    Solved a performance bug for unmarshalling of primitive type. We don't try anymore 
        to generate a Class Descriptor for primitive type as we know that not only it 
        fails but it is deadly slow (due to getMethods() call). Now, unmarhsalling speed 
        is nearly only bounded by the speed of the parser.
        (Sebastien Gignoux <gignoux@intalio.com>) 

JDO:    Added "trigger" mode for SEQUENCE key generator. 
        (Vitaly Shishakov <vitaly.shishakov@novalumen.com>)


Version 0.8.11 December, 15 2000
--------------------------------

XML:    Updated Schema syntax and some of the Schema Object Model to support 
        the W3C XML Schema Candidate Release. (kvisco)

XML:    Allow the use of uninitialized collection. Castor will instiate a new 
        collection of the proper type when necessary.
        (Sebastien Gignoux <gignoux@intalio.com>)

XML:    Added #setResolver method to Marshaller, thanks to George Stewart for
        pointing out to me that I neglected to add this method. (kvisco)

XML:    Changed name of xml element in the mapping.dtd to bind-xml. This change
        won't effect any existing mappings yet, because I've added backward
        compatibility support. (kvisco)

JDO:    For HIGH/LOW key generator the paramater "global" has been added, it gives possibility
        to generate globally unique keys (Oleg Nitz).

JDO:    SAP DB driver, improved support for MySQL (Oleg Nitz)

JDO:    Added possibility to close OQL queries in order to release resources (Oleg Nitz)

Version 0.8.10
--------------

XML:    Made the collection name in the mapping file NOT case sensitive. (Seb)
